--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <section class="hero">
-  <h1 class="title">🎬 <span>Video Portal</span></h1>
-  <p class="subtitle">Trailer video + tonton full lewat Telegram</p>
+  <h1 class="title">🎬 <span>Short movies</span></h1>
+  <p class="subtitle">Short Movies + tonton full lewat Telegram</p>
 </section>
 
 <!-- LIST KECIL, RAPIH, TIDAK PANJANG -->
